--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -1,17 +1,22 @@
 %!TEX root = Main.tex
 \section{Implementation}
-The following chapter seeks to explain the implementation of the mini project.\\
+The following chapter seeks to explain the implementation of the mini project.
 
 \subsection{Overall Design}
-Image and explanation of the overall system and blocks\\
+The full system is comprised of one or two PCs and two TelosB motes configured as a receiver and a sender. The system can be describes as seen in figure \ref{FullSystem}. 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{FullSystem}
 	\caption{Full System Diagram.}
 	\label{FullSystem}
 \end{figure}
+The PC software has three responsibilities. It takes an image and converts it to a binary file. This file is then wrapped into an array and prepared such that it can be transmitted to the TelosB mote. The transmission is handled by the Serial Communication block and can be seen in the Serial Communication subsection.
 
-\subsection{Serial communication}
+The TelosB motes are either configured as sender or receiver.  The sender has the responsibility of getting an image from the PC and transmitting it over the radio to the receiver mote. The receiver has the responsibility to receive the image from radio and transmitting it to the PC.
+
+The Serial Communication block of the TelosB mote interacts with the PC's Serial Communication block as can be read in the Serial Communication subsection. The Radio Communication block interacts with other TelosB motes as can be read in the Radio Communication subsection. Lastly the Compression block has entails the compression and decompression of the image data. This is explained in the Compression block subsection.
+
+\subsection{Serial Communication}
 The serial communication is responsible for the transfer of the image to and from the TelosB. A header file is available to both the PC software and the TelosB program. It contains a series of defines that are used for the communication messages. The defines can be found in table \ref{definetable}.
 \begin{table}[H]
     \begin{tabular}{|l|l|l|}
