--- a/Reports/Report/Introduction.tex
+++ b/Reports/Report/Introduction.tex
@@ -1,6 +1,6 @@
 %!TEX root = Main.tex
 \section{Introduction}
-The purpose of this mini project is to design and implement a system that can transfer images wirelessly between two Telos B motes. A black and white image is loaded onto the sender mote and transferred to the receiver mote with multiple types of lossy compression. The energy used during wireless transmission will be monitored in order to compare energy usage of different types  of compression. The original case description can be seen below.
+The purpose of this mini project is to design and implement a system that can transfer an image wirelessly between two TelosB motes. A grayscale image is loaded onto the sender mote and transferred to the receiver mote with an optional compression. The energy used during wireless transmission will be measured in order to compare energy usage of different types of compression and no compression. The original case description can be seen below.
 
 \begin{center}
 \noindent\rule{4cm}{0.4pt}
