--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -11,7 +11,11 @@ To keep it simple, a quick diagram was drawn to show what the expected outcome o
 For the One Bit Compression, an array with eight bytes in, all equal \texttt{0x0000 0010} was sent through the \texttt{Compress(...)} method.
 The result was seven bytes, all equal \texttt{0x0000 0010} but the last, which was equal \texttt{0x0000 0011}.
 The \texttt{Decompress(...)} had this output as input and its output validated to be all \texttt{0x0000 0010}.
+\\
+Next, we tried to send an array with eight bytes in, with increasing value from zero to seven. 
+The output was, as expected, only even numbers since the last bit was sliced off.
 
+The same approach was used for both the Two Bit Compression and the Four Bit Compression.
 
 \subsubsection{Serial communication}
 
