--- a/Reports/Report/Theory.tex
+++ b/Reports/Report/Theory.tex
@@ -16,6 +16,9 @@ We use the $256 \times 256$ pixel grayscale cameraman image (Figure \ref{fig:ima
 We use three different lossy compression algorithms in this project.
 They have a simple implementation and are fast to compute, but they are not very good at retaining image quality compared to e.g. JPEG which uses discrete cosine transform and huffman coding.
 
+Our algorithms are fast to compute since they mostly use cheap operations like bit swifting and bitwise AND/OR, and only iterates through the data once.
+Lower computation time also means that the energy consumption is lower.
+
 Our compression algorithms work by throwing away the least significant bit/bits from every byte in the image.
 For instance the four bit compression takes two bytes, \texttt{aaaa\_\_\_\_} and \texttt{bbbb\_\_\_\_}, and compresses them to a single byte \texttt{aaaabbbb}, where \texttt{a}, \texttt{b} and \texttt{\_} is a bit. Using this method, the image has been compressed 50\%.
 
