Add thoughts to discussion.

--- a/Reports/Report/Conclusion.tex
+++ b/Reports/Report/Conclusion.tex
@@ -3,4 +3,11 @@
 Why and How do we save energy by compressing?
 
 
+\textcolor{red}{TODO: Some of my thoughts on our compression:}
+\textit{Our compression algorithms might not relate very well to the real world.
+They are alot faster than e.g. JPEG, but not very effective at retaining image quality.
+In a real project you might want to use e.g. JPEG, because it compresses more and retains image quality better, but it is more expensive to run.
+We havn't tested how a very computational heavy compression with high compression rate compares to no compression.
+But maybe we can give a qualified guess based on our results?}
+
 \section{Conclusion}
