--- a/Reports/LatexModules/TableOfContentSetup.tex
+++ b/Reports/LatexModules/TableOfContentSetup.tex
@@ -7,4 +7,10 @@
 % Subsubsection = 3
 %----------------------------------------------------------
 \setcounter{secnumdepth}{3}
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{2}
+
+\usepackage{tocloft}
+
+\setlength\cftparskip{0pt}
+\setlength\cftbeforesecskip{1pt}
+\setlength\cftaftertoctitleskip{2pt}
