--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -82,9 +82,15 @@ A series of design steps is therefore taken to fit the very flexible application
 	\label{fig:RadioPacketCut}
 \end{figure}
 
-Rather than dynamically changing the packet size, to fit the data, the packet size is kept constant at the 50 bytes, and information about how much data is valid in the packet is added. Since there sometime is send a packet with some invalid data, there is introduced some overhead in the radio communication. This can be seen in figure \ref{fig:RadioPacketCut}. This is not desirable for a real wireless sensor network, but since the scope for this project is to measure communication cost vs. computation cost this will only have an major impact on the measurements if the difference in size between the compressed and original image is less than 50 bytes, and is therefore tolerable.
+Rather than dynamically changing the packet size, to fit the data, the packet size is kept constant at the 50 bytes, and information about how much data is valid in the packet is added. 
+Since there sometime is send a packet with some invalid data, there is introduced some overhead in the radio communication. 
+This can be seen in figure \ref{fig:RadioPacketCut}. 
+This is not desirable for a real wireless sensor network, but since the scope for this project is to measure communication cost vs. computation cost this will only have an major impact on the measurements if the difference in size between the compressed and original image is less than 50 bytes, and is therefore tolerable.
 
-when chopping the file in smaller pieces it is important to be able to reconstruct the image on the receiver side, and detect if a packet is lost. In order to accomplish this a packet counter that increments for each packet is added to the packet. by looking at this you can detect out of order packets, and therefore conclude that a packet is lost. In order to know when all packet is received the total size is added to the packet.  
+when chopping the file in smaller pieces it is important to be able to reconstruct the image on the receiver side, and detect if a packet is lost. 
+In order to accomplish this a packet counter that increments for each packet is added to the packet. 
+By looking at this you can detect out of order packets, and therefore conclude that a packet is lost. 
+In order to know when all packet is received the total size is added to the packet.  
 
 When receiving the first packet the receiver then know how much memory it will have to allocate to contain the entire message. 
 
@@ -96,10 +102,16 @@ When receiving the first packet the receiver then know how much memory it will h
 	\label{fig:PacketSeq}
 \end{figure}
 
-As seen on figure \ref{fig:PacketSeq} we have chosen to create a dedicated receiver and sender module. this have been done in order to better separate the energy needed for sending and receiving. On the figure it shows how after the first packet et asks for a buffer to store the whole message in. When a packet is received a message received event is called. This event is also called with a error message in case of a packet is received out of order, and the reception is terminated. 
+As seen on figure \ref{fig:PacketSeq} we have chosen to create a dedicated receiver and sender module. 
+This have been done in order to better separate the energy needed for sending and receiving. 
+On the figure it shows how after the first packet et asks for a buffer to store the whole message in. 
+When a packet is received a message received event is called. 
+This event is also called with a error message in case of a packet is received out of order, and the reception is terminated. 
 
-As shown, there is no acknowledgement or retransmission. For a practical application this features would be a necessary and important to ensure reliability. But in this project predictability is more important than reliability.  This is to ensure that packet loss and transmission not add unnecessary energy usage, and deminicis otherwise optimal solutions.  
-
+As shown, there is no acknowledgement or retransmission. 
+For a practical application this features would be a necessary and important to ensure reliability. 
+But in this project predictability is more important than reliability.  
+This is to ensure that packet loss and transmission not add unnecessary energy usage, and deminicis otherwise optimal solutions.  
 
 
 
