--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -18,7 +18,7 @@
 \newpage
 
 \tableofcontents 	% Table of Contents
-% \listoffixmes 	%See LatexModule 
+\listoffixmes 	%See LatexModule 
 
 \newpage
 
