--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -1,27 +1,30 @@
 %!TEX root = Main.tex
 \section{Implementation}
-The following chapter seeks to explain the implementation of the mini project.
+This section explains the implementation of the mini project.
 
 \subsection{Overall Design}
-The full system is comprised of one or two PCs and two TelosB motes configured as a receiver and a sender. The system can be describes as seen in figure \ref{FullSystem}. 
+The full system is comprised of one or two PCs and two TelosB motes configured as a receiver and a sender. An overview of the system can be seen in Figure \ref{FullSystem}.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{FullSystem}
 	\caption{Full System Diagram.}
 	\label{FullSystem}
 \end{figure}
-The PC software has three responsibilities. It takes an image and converts it to a binary file. This file is then wrapped into an array and prepared such that it can be transmitted to the TelosB mote. The transmission is handled by the Serial Communication block and can be seen in the section \ref{sec:Serial-Communication}.
 
-The TelosB motes are either configured as sender or receiver.  The sender has the responsibility of getting an image from the PC and transmitting it over the radio to the receiver mote. The receiver has the responsibility to receive the image from radio and transmitting it to the PC.
+The Image Formatting block takes an image and converts it to a binary file.
+The Data Wrapping block prepares the image such that it can be transmitted to the TelosB mote.
+The transmission is handled by the Serial Communication block which is descriped in detail in section \ref{sec:Serial-Communication}.
 
-The Serial Communication block of the TelosB mote interacts with the PC's Serial Communication block as can be read in section \ref{sec:Serial-Communication}. 
-The Radio Communication block interacts with other TelosB motes as can be read in section \ref{sec:Radio-Block}. 
-Lastly the Compression block has entails the compression and decompression of the image data. 
-This is explained in the section \ref{sec:Compression-block}.
+The TelosB motes are either configured as sender or receiver.  The sender has the responsibility of receiving an image from the PC and transmitting it over the radio to the receiver mote. The receiver has the responsibility of receiving the image from radio and transmit it to the PC.
+
+The Serial Communication block of the TelosB motes communicates with the PC's Serial Communication block as descriped in section \ref{sec:Serial-Communication}.\\
+The Radio Communication block communicates with the other TelosB mote as descriped in section \ref{sec:Radio-Block}. \\
+The Compression block does the compression and decompression of the image as descriped in section \ref{sec:Compression-block}.
 
 \subsection{Serial Communication}
 \label{sec:Serial-Communication}
-The serial communication is responsible for the transfer of data to and from the TelosB. A header file is available to both the PC software and the TelosB program. It contains a series of defines that are used for the communication messages. The defines can be found in table \ref{definetable}.
+The serial communication is responsible for transfering the image to and from the TelosB mote. A header file is available to both the PC software and the TelosB program. It contains a series of defines that are used for the communication messages. The defines can be found in Table \ref{definetable}.
 \begin{table}[H]
 \centering
     \begin{tabular}{lll}
@@ -41,9 +44,9 @@ The serial communication is responsible for the transfer of data to and from the
     \label{definetable}
 \end{table}
 
-Using these defines and the TinyOS struct of \texttt{message\_t}, the PC and TelosB mote can exchange information. 
-The sequence for transferring data to the TelosB can be found in figure \ref{transfertotelos}. 
-Likewise the sequence for transferring data from the TelosB to the PC can be found in figure \ref{transferfromtelos}.
+Using these defines and the TinyOS struct of \texttt{message\_t}, the PC and TelosB mote can exchange data. 
+The sequence for transferring data from the PC to the TelosB can be found in Figure \ref{transfertotelos}. 
+Likewise the sequence for transferring data from the TelosB to the PC can be found in Figure \ref{transferfromtelos}.
 
 \begin{figure}[H]
 	\centering
@@ -52,12 +55,10 @@ Likewise the sequence for transferring data from the TelosB to the PC can be fou
 	\label{transfertotelos}
 \end{figure}
 
-The serial communication is initiated by the PC. 
-The \texttt{TRANSFER\_OK} signal is used when transferring to the TelosB as the PC is faster than the TelosB. 
-It also ensures that the TelosB is ready to receive. 
-The TelosB has to use clock cycles to read and write to memory. 
-When transferring to the PC it is assumed that the PC is ready before the TelosB starts sending. 
-The PC software starts reconstructing the image to a binary file when the \texttt{TRANSFER\_DONE} is received. 
+The serial communication is initiated by the PC.
+The \texttt{TRANSFER\_OK} signal is used when transferring to the TelosB, to tell the PC that the transfer is done and that the TelosB is ready to receive the next package.
+When transferring to the PC it is assumed that the PC is ready before the TelosB starts sending.
+The PC software starts reconstructing the image to a binary file when the \texttt{TRANSFER\_DONE} is received.
 The binary file is loaded in Matlab and the image is reconstructed for human viewing.
 \begin{figure}[H]
 	\centering
@@ -65,8 +66,8 @@ The binary file is loaded in Matlab and the image is reconstructed for human vie
 	\caption{Transfer from TelosB sequence diagram.}
 	\label{transferfromtelos}
 \end{figure}
-The PC software is implemented in Matlab and Java using image processing tools and the TinyOS example project "TestSerial". 
-The TelosB software is based on the code used in multiple examples ranging from "BlockStorage" to "TestSerial". 
+The PC software is implemented in Matlab and Java using image processing tools and the TinyOS example project "TestSerial".
+The TelosB software is based on the "BlockStorage" and "TestSerial" examples.
 
 
 
