--- a/Reports/Report/Theory.tex
+++ b/Reports/Report/Theory.tex
@@ -13,7 +13,11 @@ The image is saved in the TelosB flash as a binary file. Each pixel is represent
 \end{figure}
 
 \subsection{Energy Consumption}
-Energy consumption is important when we look at wireless sensor networks. The component with the most energy consumption of the TelosB is the Radio circuitry as seen in the TelosB datasheet\fxnote{Reference to the datasheet. Put it in the datasheet folder on CD}. The challenge is to choose when to use the radio and how often. When comparing the radio current (23 mA) with the processing current (1.8 mA), it is clear that it is better to process data before sending it. Processing data in order to reduce package size or transmission rate is the basis principle of this mini project. 
+Energy consumption is important when we look at wireless sensor networks. 
+The component with the most energy consumption of the TelosB is the radio circuitry as seen in the TelosB datasheet\cite{dataSheet}. 
+The challenge is to choose when to use the radio and how often. 
+When comparing the radio current (23 mA) with the processing current (1.8 mA), it is clear that it is better to process data before sending it. 
+Processing data in order to reduce package size or transmission rate is the basis principle of this mini project. 
 
 \subsection{Compression}
 
